Fixed bug where profile side bar height was not aligned with music section of profile page.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -185,6 +185,7 @@ body {
   font-size: 0.85rem;
   overflow: hidden;
   height: 100vh;
+  border: 1px transparent;
 }
 
 @media (max-width: 768px) {
